Add get connections endpoint
